Remove CommandService & PowerShellExecutionService & Replace with Native Methods

--- a/src/Winhance.UI/Features/AdvancedTools/AdvancedToolsPage.xaml
+++ b/src/Winhance.UI/Features/AdvancedTools/AdvancedToolsPage.xaml
@@ -101,6 +101,8 @@
                 <!-- Overview Content (visible when not on detail page) -->
                 <Grid x:Name="OverviewContent">
                     <ScrollView>
+                        <!-- Wrap StackPanel in Grid to avoid visual glitches with MaxWidth -->
+                        <Grid>
                         <StackPanel Spacing="8" MaxWidth="{StaticResource SettingsContentMaxWidth}" Margin="{StaticResource SettingsContentMargin}" HorizontalAlignment="Stretch" Padding="0,12,0,12">
 
                             <!-- WIM Utility Card -->
@@ -126,6 +128,7 @@
                             </controls:SettingsCard>
 
                         </StackPanel>
+                        </Grid>
                     </ScrollView>
                 </Grid>
 
