--- a/src/Winhance.UI/Features/AdvancedTools/AutounattendGeneratorPage.xaml
+++ b/src/Winhance.UI/Features/AdvancedTools/AutounattendGeneratorPage.xaml
@@ -8,6 +8,8 @@
     NavigationCacheMode="Disabled">
 
     <ScrollView Padding="0,12,0,12">
+        <!-- Wrap StackPanel in Grid to avoid visual glitches with MaxWidth -->
+        <Grid>
         <StackPanel Spacing="8" MaxWidth="{StaticResource SettingsContentMaxWidth}" Margin="{StaticResource SettingsContentMargin}" HorizontalAlignment="Stretch">
 
             <!-- Generate Autounattend XML Card -->
@@ -43,5 +45,6 @@
                 Margin="0,16,0,0"/>
 
         </StackPanel>
+        </Grid>
     </ScrollView>
 </Page>
