--- a/src/Winhance.UI/Features/Customize/CustomizePage.xaml
+++ b/src/Winhance.UI/Features/Customize/CustomizePage.xaml
@@ -187,6 +187,8 @@
 
                     <!-- Overview Cards -->
                     <ScrollView Visibility="{x:Bind ViewModel.IsNotLoading}">
+                        <!-- Wrap StackPanel in Grid to avoid visual glitches with MaxWidth -->
+                        <Grid>
                         <StackPanel Spacing="8" MaxWidth="{StaticResource SettingsContentMaxWidth}" Margin="{StaticResource SettingsContentMargin}" HorizontalAlignment="Stretch" Padding="0,12,0,12">
 
                             <!-- Windows Theme Card -->
@@ -238,6 +240,7 @@
                             </controls:SettingsCard>
 
                         </StackPanel>
+                        </Grid>
                     </ScrollView>
                 </Grid>
 
