--- a/src/Winhance.WPF/Features/Common/Resources/Styles/ToggleSwitchStyles.xaml
+++ b/src/Winhance.WPF/Features/Common/Resources/Styles/ToggleSwitchStyles.xaml
@@ -18,6 +18,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource AccessibleFocusVisual}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ToggleButton">
