--- a/src/Winhance.WPF/Features/Common/Views/DonationDialog.xaml
+++ b/src/Winhance.WPF/Features/Common/Views/DonationDialog.xaml
@@ -33,7 +33,8 @@
 
         <Border CornerRadius="10"
                 BorderBrush="Transparent"
-                Background="{DynamicResource WindowBackground}">
+                Background="{DynamicResource WindowBackground}"
+                KeyboardNavigation.TabNavigation="Cycle">
             <Grid Margin="20">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
