--- a/src/Winhance.WPF/Features/Common/Controls/ContentLoadingOverlay.xaml
+++ b/src/Winhance.WPF/Features/Common/Controls/ContentLoadingOverlay.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:converters="clr-namespace:Winhance.WPF.Features.Common.Converters"
+             xmlns:loc="clr-namespace:Winhance.WPF.Features.Common.Extensions"
              x:Name="Root">
 
     <UserControl.Resources>
@@ -29,6 +30,7 @@
             </StackPanel>
 
             <TextBlock Text="{Binding StatusMessage, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                       AutomationProperties.LiveSetting="Polite"
                        FontSize="16"
                        FontWeight="Normal"
                        Foreground="{DynamicResource PrimaryTextColor}"
@@ -38,6 +40,7 @@
             <ProgressBar IsIndeterminate="True"
                          Width="280"
                          Height="8"
+                         AutomationProperties.Name="{loc:Localize Accessibility_Loading}"
                          Background="Transparent"
                          BorderBrush="Transparent"
                          BorderThickness="0"
