--- a/src/Winhance.WPF/Features/Common/Controls/SearchBox.xaml
+++ b/src/Winhance.WPF/Features/Common/Controls/SearchBox.xaml
@@ -56,6 +56,7 @@
                      Height="30"
                      Padding="5,0,2,0"
                      LostFocus="SearchTextBox_LostFocus"
+                     AutomationProperties.Name="{loc:Localize Accessibility_SearchSettings}"
                      Style="{StaticResource RoundedTextBoxStyle}"/>
         </Grid>
         
@@ -65,6 +66,7 @@
                 Padding="0"
                 Margin="2,0,2,0"
                 Focusable="False"
+                AutomationProperties.Name="{loc:Localize Accessibility_ClearSearch}"
                 Click="ClearButton_Click">
             <Button.Style>
                 <Style TargetType="Button" BasedOn="{StaticResource SearchClearButtonStyle}">
