--- a/src/Winhance.WPF/Features/Common/Resources/Styles/CheckBoxStyles.xaml
+++ b/src/Winhance.WPF/Features/Common/Resources/Styles/CheckBoxStyles.xaml
@@ -21,6 +21,7 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}"/>
         <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="FocusVisualStyle" Value="{StaticResource AccessibleFocusVisual}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="CheckBox">
