--- a/src/Winhance.WPF/Features/Common/Views/LoadingWindow.xaml
+++ b/src/Winhance.WPF/Features/Common/Views/LoadingWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:shell="clr-namespace:System.Windows.Shell;assembly=PresentationFramework"
+    xmlns:loc="clr-namespace:Winhance.WPF.Features.Common.Extensions"
     Title="Loading"
     Width="450"
     Height="280"
@@ -59,6 +60,7 @@
                     <TextBlock
                         Style="{StaticResource HeaderTextBlockStyle}"
                         Text="{Binding StatusMessage}"
+                        AutomationProperties.LiveSetting="Polite"
                         FontSize="16"
                         FontWeight="SemiBold"
                         Margin="0,0,0,5"
@@ -69,6 +71,7 @@
                     <TextBlock
                         Style="{StaticResource StatusTextStyle}"
                         Text="{Binding DetailMessage}"
+                        AutomationProperties.LiveSetting="Polite"
                         FontStyle="Italic"
                         Margin="0,0,0,20"
                         HorizontalAlignment="Center"
@@ -80,6 +83,7 @@
                         Style="{StaticResource StandardProgressBar}"
                         IsIndeterminate="{Binding IsIndeterminate}"
                         Value="{Binding Progress}"
+                        AutomationProperties.Name="{loc:Localize Accessibility_Loading}"
                         Width="300"/>
 
                     <!-- Progress Text -->
